# RayTracingChallenge

./: .clang-format  .clang_complete  .gitignore  .nvimrc  .syntastic_clang_check_config  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Readme.adoc  Readme.html
common/: CMakeLists.txt  datastructures.hpp
common/src/main/: datastructures.cpp  datastructures.hpp  inigiotestworld.shadertoy  perlinnoise.hpp  raymarch.cpp  raymarch.hpp
images/: Ch7MakingAScene.ppm
images/chapter10/: Ch10AlmostThere.ppm  Ch10PuttingItTogether.ppm  Ch10PuttingItTogetherBlendedPattern.ppm  Ch10PuttingItTogetherNestedPattern.ppm  Ch10PuttingItTogetherPerturbedPattern.ppm
images/chapter11/: Ch11MakingAScene.ppm  Ch11ReflectedColorReflectiveMaterial.ppm  Ch11ShadeHitWithAReflectiveMaterial.ppm
images/chapter12/: Ch12CanvasMultiThread.ppm  Ch12PuttingItTogether.ppm  Ch12PuttingItTogether2.ppm
images/chapter13/: Ch13PuttingItTogether.ppm  Ch13PuttingItTogether2.ppm
images/chapter2/: Projectile.ppm
images/chapter8/: Ch8MakingAScene.ppm
images/chapter9/: Ch9MakingAScene.ppm  Ch9MakingASceneHexagon.ppm
images/raymarch/: RayMarchTest1.ppm  RayMarchTest2.ppm
references/: references.md
src/raytrace/: CMakeLists.txt  build.linux  cmake_install.cmake  raytrace
src/raytrace/src/: main.cpp
src/raytrace/src/main/: featuretest.hpp  main.cpp  projectile.hpp  testmatrixch1.cpp  testmatrixch1.hpp  testmatrixch10.cpp  testmatrixch11.cpp  testmatrixch12.cpp  testmatrixch13.cpp  testmatrixch6.cpp  testmatrixch7.cpp  testmatrixch7.hpp  testmatrixch8.cpp  testmatrixch9.cpp  testmatrixch9.hpp  testraymarch.cpp  testsmatrix.cpp  testsmatrix.hpp
src/raytrace/src/test/: testtup.cpp  testtup.hpp
src/shadertoy/: raymarch.shtoy
